spargen/tests/snapshots/diff__a_breaking_json_report_spells_the_bump_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|required-param-added|GET /pets param `limit` (query)|required parameter added: `i64`
bump=major
