spargen/tests/snapshots/diff__a_mixed_report_summarizes_and_displays_every_change-2.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
minor|operation-added|GET /owners|new operation
bump=minor
