spargen/tests/snapshots/diff__a_one_position_tuple_is_labelled_with_its_trailing_comma.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|success-type-changed|GET /pets|success type `i64` -> `(i64,)`
bump=major
