spargen/tests/snapshots/diff__a_parameter_is_keyed_by_its_location_as_well_as_its_name-2.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|param-type-changed|GET /pets/{id} param `id` (query)|parameter type `String` -> `i64`
bump=major
