spargen/tests/snapshots/diff__a_self_referential_array_is_labelled_by_its_newtype_name-2.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|success-type-changed|GET /pets|success type `Node` -> `Vec<Node>`
bump=major
