spargen/tests/snapshots/diff__a_struct_becoming_a_cycle_member_newtype_changes_its_kind.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|type-kind-changed|Status|type kind `struct` -> `newtype`
bump=major
