spargen/tests/snapshots/diff__a_struct_becoming_uninhabited_changes_its_kind-2.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|type-kind-changed|Nope|type kind `empty enum` -> `struct`
bump=major
