spargen/tests/snapshots/diff__added_optional_field_is_minor.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
minor|field-added|Pet.tag|optional field added: `String`
bump=minor
