spargen/tests/snapshots/diff__added_optional_param_is_minor.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
minor|optional-param-added|GET /pets param `limit` (query)|optional parameter added: `i64`
bump=minor
